# S3Watch

./: AGENTS.md  CMakeLists.txt  README.MD  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/audio_alert/: CMakeLists.txt
components/audio_alert/include/: audio_alert.h
components/ble/: CMakeLists.txt  ble_service.c
components/ble_sync/: CMakeLists.txt  ble_sync.c  idf_component.yml
components/ble_time_sync/: CMakeLists.txt  ble_time_sync.c
components/bsp_extra/: CMakeLists.txt  idf_component.yml
components/display_manager/: CMakeLists.txt  display_manager.c  idf_component.yml
components/gui/: CMakeLists.txt  batt_screen.c  brightness_screen.c  notifications.c  settings_screen.c  steps_screen.c  ui.c  watchface.c
components/gui/font/: font_bold_26.c  font_bold_28.c  font_inter_bold_28.c  font_inter_regular_28.c  font_normal_26.c  font_roboto_serif_bold_164.c  font_roboto_serif_regular_164.c  font_space_grotesk_regular_23.c  font_space_grotesk_regular_28.c  font_space_grotesk_regular_80.c
components/gui/icons/: image_call_48.c  image_gmail_48.c  image_health_off.c  image_health_on.c  image_heart_bg_large.c  image_heart_bg_small.c  image_messenger_48.c  image_mute_icon.c  image_notification_48.c  image_outlook_48.c  image_sms_48.c  image_teams_48.c  image_telegram_48.c  image_whatsapp_48.c  image_youtube_48.c
components/gui/include/: notifications.h  setting_sound_screen.h  setting_step_goal_screen.h  setting_storage_screen.h  setting_timeout_screen.h  settings_menu_screen.h  settings_screen.h  steps_screen.h  storage_file_explorer.h  ui.h  ui_private.h  watchface.h
components/gui/src/: batt_screen.c  brightness_screen.c  lvgl_spiffs_fs.c  notifications.c  setting_sound_screen.c  setting_step_goal_screen.c  setting_storage_screen.c  setting_timeout_screen.c  settings_menu_screen.c  settings_screen.c  steps_screen.c  storage_file_explorer.c  ui.c  watchface.c
components/sensors/: CMakeLists.txt  sensors.c
components/settings/: CMakeLists.txt  settings.c
main/: CMakeLists.txt  idf_component.yml  main.cpp
ui_assets/: README.MD
(+13 files in other folders)
